--- a/src/components/Page-2/page2.css
+++ b/src/components/Page-2/page2.css
@@ -18,6 +18,18 @@
   color: #333;
 }
 
+.exit-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+  color: #333;
+  border: 1px solid #333;
+}
+
 nav a {
   margin-left: 20px;
   text-decoration: none;
@@ -41,7 +53,7 @@ nav a {
 }
 
 .link-ayuda a {
-  color: #1a73e8;
+  color: #000000;
   text-decoration: none;
   font-size: 1rem;
 }
