--- a/src/components/Page-1/page1.css
+++ b/src/components/Page-1/page1.css
@@ -20,16 +20,22 @@
     grid-column: 1;
 }
 
-.nav-list {
+.bt-list {
     display: flex;
     gap: 1rem;
     align-items: center;
     grid-column: 2;
-    justify-self: start;
+
 }
 
-.nav-list nav {
+.bt-list button {
+    border: solid 1px #7e7e7e;
     color: black;
+}
+
+.bt-list button a {
+    color: black;
+    text-decoration: none;
 }
 
 .user-menu {
@@ -239,6 +245,10 @@
     width: 100%;
     height: 10rem;
     background-color: #bbb;
+}
+
+.text {
+    margin-top: 70px;
 }
 
 @media (max-width: 768px) {
